--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,8 @@
 <ul>
   <% @posts.each do |post| %>
     <li>
-      <%= link_to post.title, post.url %>
+      <%= link_to post.title, post.url %> 
+      (<%= link_to pluralize(post.comments.count, 'comment'), post %>)
     </li>
   <% end %>
 </ul>
