--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,1 +1,19 @@
-GamerList
+<a class="brand" href="#">GamerList</a>
+
+<ul class="nav">
+  <li class="active">
+    <a href="#">Home</a>
+  </li>
+  <li><a href="#">Link</a></li>
+  <li><a href="#">Link</a></li>
+</ul>    
+
+<ul class="nav pull-right">
+  <% if logged_in? %>
+    <li><a href="#">Welcome <%= current_user.username %>!</a></li>
+    <li><%= link_to "Logout", logout_path %></li>
+  <% else %>
+    <li><%= link_to "Register", register_path %></li>
+    <li><%= link_to "Login", login_path %></li>
+  <% end %>
+</ul>   
