--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,16 +5,19 @@
   <ul>
     <% @post.comments.each do |comment| %>
       <li><%= comment.content %></li>
+      Posted by <%= comment.user.username %>
     <% end %>
   </ul>
 </p>
 
-<h4>Post a comment</h4>
-<p>
-  <%= form_for [@post, @comment] do |f| %>
-    <%= f.label :content %>
-    <%= f.text_area :content, rows: 5 %>
-    <br>
-    <%= f.submit "Submit" %>
-  <% end %>
-</p>
+<% if logged_in? %>
+  <h4>Post a comment</h4>
+  <p>
+    <%= form_for [@post, @comment] do |f| %>
+      <%= f.label :content %>
+      <%= f.text_area :content, rows: 5 %>
+      <br>
+      <%= f.submit "Submit" %>
+    <% end %>
+  </p>
+<% end %>
