--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,9 @@
   
   <%= f.label :password %>
   <%= f.password_field :password %>
+
+  <%= f.label :twitter %>
+  <%= f.password_field :twitter %>
   <br>
   <%= f.submit "Register" %>
 <% end %>
