Fixed bug in the register page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,7 +12,7 @@
   <%= f.password_field :password %>
 
   <%= f.label :twitter %>
-  <%= f.password_field :twitter %>
+  <%= f.text_field :twitter %>
   <br>
   <%= f.submit "Register" %>
 <% end %>
